// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Playlist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt overlay"
      role="article"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        />
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          My favourites
        </h3>
         
        <h4
          slot="details"
        >
          3 tracks
        </h4>
      </header>
    </span>
  </div>
  
  
</section>
`;

exports[`Storyshots Components/Playlist Single Track 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt overlay"
      role="article"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        />
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          My favourites
        </h3>
         
        <h4
          slot="details"
        >
          1 track
        </h4>
      </header>
    </span>
  </div>
  
  
</section>
`;
